--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
   html, body { margin:0; padding:0; background:#000; overflow:hidden; height:100%; font-family:'Courier New', monospace; color:#0af; }
   canvas { display:block; }
   #hud { position:absolute; top:16px; left:16px; font-size:13px; opacity:0.7; pointer-events:none; letter-spacing:1px; }
-  #data { position:absolute; bottom:16px; left:16px; font-size:10px; opacity:0.5; pointer-events:none; max-width:380px; line-height:1.4; }
-  #data span.val { color:#8cf; font-weight:bold; }
+  #data { position:absolute; bottom:16px; left:16px; font-size:10px; opacity:0.6; pointer-events:none; max-width:400px; line-height:1.4; }
+  #data .real { color:#0f0; font-weight:bold; }
+  #data .fallback { color:#888; }
+  #data .warning { color:#ff0; }
   #clock { position:absolute; bottom:16px; right:16px; font-size:11px; opacity:0.45; color:#6cf; text-align:right; pointer-events:none; line-height:1.3; }
-  #status { position:absolute; top:40px; left:16px; font-size:11px; opacity:0.6; color:#f93; }
+  #status { position:absolute; top:40px; left:16px; font-size:11px; opacity:0.6; color:#0af; }
 </style>
 </head>
 <body>
-<div id="hud">GEOMETRIC CHAOS — SMOOTH EARTH PULSE</div>
-<div id="status">Дані: завантаження...</div>
-<div id="data">Завантаження реальних даних...</div>
+<div id="hud">GEOMETRIC CHAOS — SMOOTH PULSE</div>
+<div id="status"></div>
+<div id="data">ініціалізація...</div>
 <div id="clock">—</div>
 <canvas id="c"></canvas>
 
@@ -54,6 +56,7 @@ for (let i = 0; i < 300; i++) {
 
 let realData = { seismic:0.5, magnetic:0.5, atmosphere_wind:0.5, atmosphere_pressure:0.5, atmosphere_temp:0.5, ocean:0.5, solar_radiation:0.5, solar_wind:0.5, precipitation:0.5, chaos:0.5 };
 let dataHistory = {}; Object.keys(realData).forEach(k => dataHistory[k] = []);
+let sources = {}; // для відстеження стану джерел
 
 const blobs = [
   { param: 'seismic', color: 'rgba(220,60,80,', phase: 0.0, targetSize:6, targetAlpha:0.75 },
@@ -69,38 +72,71 @@ blobs.forEach(b => { b.angle = Math.random()*Math.PI*2; b.radius = 60 + Math.ran
 function lerp(a, b, t) { return a + (b - a) * t; }
 
 async function fetchRealPlanetData() {
-  statusDiv.innerHTML = 'Дані: завантаження...';
+  statusDiv.innerHTML = 'оновлення...';
+  let loaded = 0;
+
   try {
-    // Open-Meteo (працює з браузера, CORS OK)
+    // Open-Meteo
     const weatherUrl = `https://api.open-meteo.com/v1/forecast?latitude=50.55&longitude=30.25&current=temperature_2m,wind_speed_10m,surface_pressure,precipitation,shortwave_radiation`;
     const wRes = await fetch(weatherUrl);
-    if (!wRes.ok) throw new Error('Weather fail');
-    const w = (await wRes.json()).current || {};
+    if (wRes.ok) {
+      const w = (await wRes.json()).current || {};
+      realData.atmosphere_temp     = Math.min(1, Math.max(0, (w.temperature_2m + 40) / 80));
+      realData.atmosphere_wind     = Math.min(1, (w.wind_speed_10m || 0) / 80);
+      realData.atmosphere_pressure = Math.min(1, Math.max(0, ((w.surface_pressure || 1013) - 950) / 150));
+      realData.precipitation       = Math.min(1, (w.precipitation || 0) / 15);
+      realData.solar_radiation     = Math.min(1, (w.shortwave_radiation || 0) / 1200);
+      loaded += 5;
+      sources.atmosphere_temp = sources.atmosphere_wind = sources.atmosphere_pressure = sources.precipitation = sources.solar_radiation = true;
+    }
 
-    realData.atmosphere_temp     = Math.min(1, Math.max(0, (w.temperature_2m + 40) / 80));
-    realData.atmosphere_wind     = Math.min(1, (w.wind_speed_10m || 0) / 80);
-    realData.atmosphere_pressure = Math.min(1, Math.max(0, ((w.surface_pressure || 1013) - 950) / 150));
-    realData.precipitation       = Math.min(1, (w.precipitation || 0) / 15);
-    realData.solar_radiation     = Math.min(1, (w.shortwave_radiation || 0) / 1200);
-
-    // Marine API (CORS OK)
+    // Marine
     const oceanRes = await fetch(`https://marine-api.open-meteo.com/v1/marine?latitude=44.5&longitude=34.0&current=wave_height`);
-    const o = (await oceanRes.json()).current || {};
-    realData.ocean = Math.min(1, (o.wave_height || 0) / 8);
+    if (oceanRes.ok) {
+      const o = (await oceanRes.json()).current || {};
+      realData.ocean = Math.min(1, (o.wave_height || 0) / 8);
+      loaded++;
+      sources.ocean = true;
+    }
 
-    // USGS (CORS дозволений)
+    // USGS
     const eqRes = await fetch('https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_hour.geojson');
-    const eq = await eqRes.json();
-    const feats = eq.features || [];
-    const count = feats.length;
-    const maxMag = feats.reduce((m, f) => Math.max(m, f.properties?.mag || 0), 0);
-    realData.seismic = Math.min(1, (count / 30) + (maxMag / 10) * 0.5);
+    if (eqRes.ok) {
+      const eq = await eqRes.json();
+      const feats = eq.features || [];
+      const count = feats.length;
+      const maxMag = feats.reduce((m, f) => Math.max(m, f.properties?.mag || 0), 0);
+      realData.seismic = Math.min(1, (count / 30) + (maxMag / 10) * 0.5);
+      loaded++;
+      sources.seismic = true;
+    }
 
-    // NOAA не працює → фолбек на випадкове або фіксоване
-    realData.solar_wind = Math.random() * 0.4 + 0.3; // або фікс 0.5
-    realData.magnetic   = Math.random() * 0.3 + 0.2;
+    // NOAA (через проксі)
+    const proxy = 'https://corsproxy.io/?';
+    try {
+      const solarRes = await fetch(proxy + encodeURIComponent('https://services.swpc.noaa.gov/products/solar-wind/plasma-7-day.json'));
+      if (solarRes.ok) {
+        const data = await solarRes.json();
+        const latest = data[data.length - 1] || [];
+        const speed = parseFloat(latest[3]) || 400;
+        realData.solar_wind = Math.min(1, Math.max(0, (speed - 250) / 750));
+        loaded++;
+        sources.solar_wind = true;
+      }
+    } catch {}
 
-    // Історія + chaos
+    try {
+      const kpRes = await fetch(proxy + encodeURIComponent('https://services.swpc.noaa.gov/products/geospace/planetary-k-index-1-minute.json'));
+      if (kpRes.ok) {
+        const data = await kpRes.json();
+        const latestKp = parseFloat(data[data.length - 1]?.[1]) || 0;
+        realData.magnetic = Math.min(1, latestKp / 9);
+        loaded++;
+        sources.magnetic = true;
+      }
+    } catch {}
+
+    // chaos
     Object.keys(realData).forEach(k => {
       if (k !== 'chaos') {
         dataHistory[k].push(realData[k]);
@@ -126,20 +162,27 @@ async function fetchRealPlanetData() {
       b.targetDist = 70 + v * 80;
     });
 
-    dataDiv.innerHTML = Object.keys(realData).map(k => `${k.padEnd(20,' ')} <span class="val">${realData[k].toFixed(3)}</span>`).join('<br>');
-    statusDiv.innerHTML = 'Дані: ОК (частково реальні)';
+    // Вивід з підсвіткою
+    let html = '';
+    Object.keys(realData).forEach(k => {
+      let cls = 'fallback';
+      if (sources[k] === true) cls = 'real';
+      else if (k !== 'chaos') cls = 'warning';
+      html += `${k.padEnd(20,' ')} <span class="${cls}">${realData[k].toFixed(3)}</span><br>`;
+    });
+    dataDiv.innerHTML = html;
+
+    statusDiv.innerHTML = loaded > 0 ? 'оновлено' : '';
 
   } catch (e) {
-    console.error('Fetch error:', e);
-    statusDiv.innerHTML = 'Дані: помилка → випадкові';
-    Object.keys(realData).forEach(k => { if (k !== 'chaos') realData[k] = Math.random()*0.6 + 0.2; });
+    console.error(e);
+    statusDiv.innerHTML = '';
   }
 }
 
 fetchRealPlanetData();
-setInterval(fetchRealPlanetData, 60000); // 60 секунд
+setInterval(fetchRealPlanetData, 120000);
 
-// Анімація (без змін)
 let t = 0;
 function loop() {
   t += 0.016;
@@ -183,7 +226,6 @@ function loop() {
   ctx.beginPath(); ctx.arc(cx,cy,ringR*0.45,0,Math.PI*2);
   ctx.fillStyle = `rgba(100,200,255,${0.02 + chaos*0.10 + Math.sin(t*0.7)*0.03})`; ctx.fill();
 
-  // Геометрія (залишив)
   for (let i=0; i<5; i++) {
     const r = ringR*(0.8 + i*0.1) + realData.seismic*20*Math.sin(t*0.3 + i);
     ctx.beginPath(); ctx.arc(cx,cy,r,0,Math.PI*2);
