--- a/index.html
+++ b/index.html
@@ -15,24 +15,21 @@
   #clock { position:absolute; bottom:16px; right:16px; font-size:11px; opacity:0.45; color:#6cf; text-align:right; pointer-events:none; line-height:1.3; }
   #status { position:absolute; top:40px; left:16px; font-size:11px; opacity:0.6; color:#0af; }
 
-  /* >>> ADDED SYSTEM LINK <<< */
+  /* system1 — НЕ ВТРУЧАЄТЬСЯ В CANVAS */
   #system1 {
     position:absolute;
     bottom:16px;
     left:50%;
     transform:translateX(-50%);
     font-size:11px;
-    opacity:0.55;
+    opacity:0.5;
     color:#0af;
-    cursor:pointer;
-    letter-spacing:1px;
     text-decoration:none;
-    transition:opacity 0.2s, color 0.2s;
+    letter-spacing:1px;
+    cursor:pointer;
+    z-index:10;
   }
-  #system1:hover {
-    opacity:0.9;
-    color:#6cf;
-  }
+  #system1:hover { opacity:0.9; color:#6cf; }
 </style>
 </head>
 <body>
@@ -42,7 +39,6 @@
 <div id="data">ініціалізація...</div>
 <div id="clock">—</div>
 
-<!-- SYSTEM LINK -->
 <a id="system1" href="https://lavandaaudit.github.io/test3/" target="_blank">system1</a>
 
 <canvas id="c"></canvas>
@@ -69,62 +65,117 @@ function formatRelativeTime(ms) {
 }
 function updateClock() {
   const now = new Date();
-  clockDiv.innerHTML = `${String(now.getHours()).padStart(2,'0')}:${String(now.getMinutes()).padStart(2,'0')}:${String(now.getSeconds()).padStart(2,'0')}<br>${formatRelativeTime(Date.now() - startTime)}`;
+  clockDiv.innerHTML =
+    `${String(now.getHours()).padStart(2,'0')}:`+
+    `${String(now.getMinutes()).padStart(2,'0')}:`+
+    `${String(now.getSeconds()).padStart(2,'0')}<br>`+
+    `${formatRelativeTime(Date.now() - startTime)}`;
 }
 setInterval(updateClock, 1000); updateClock();
 
 const stars = [];
 for (let i = 0; i < 300; i++) {
-  stars.push({ x: Math.random()*canvas.width, y: Math.random()*canvas.height, size: Math.random()*1.4+0.4, baseAlpha: Math.random()*0.4+0.25, twinkle: Math.random()*0.015+0.006 });
+  stars.push({
+    x: Math.random()*canvas.width,
+    y: Math.random()*canvas.height,
+    size: Math.random()*1.4+0.4,
+    baseAlpha: Math.random()*0.4+0.25,
+    twinkle: Math.random()*0.015+0.006
+  });
 }
 
-let realData = { seismic:0.5, magnetic:0.5, atmosphere_wind:0.5, atmosphere_pressure:0.5, atmosphere_temp:0.5, ocean:0.5, solar_radiation:0.5, solar_wind:0.5, precipitation:0.5, chaos:0.5 };
-let dataHistory = {}; Object.keys(realData).forEach(k => dataHistory[k] = []);
+let realData = {
+  seismic:0.5, magnetic:0.5,
+  atmosphere_wind:0.5, atmosphere_pressure:0.5,
+  atmosphere_temp:0.5, ocean:0.5,
+  solar_radiation:0.5, solar_wind:0.5,
+  precipitation:0.5, chaos:0.5
+};
+
+let dataHistory = {};
+Object.keys(realData).forEach(k => dataHistory[k] = []);
 let sources = {};
 
 const blobs = [
-  { param: 'seismic', color: 'rgba(220,60,80,', phase: 0.0, targetSize:6, targetAlpha:0.75 },
-  { param: 'magnetic', color: 'rgba(60,180,255,', phase: 1.2, targetSize:6, targetAlpha:0.75 },
-  { param: 'atmosphere_wind', color: 'rgba(80,255,160,', phase: 2.4, targetSize:6, targetAlpha:0.7 },
-  { param: 'atmosphere_temp', color: 'rgba(255,180,60,', phase: 3.6, targetSize:6, targetAlpha:0.7 },
-  { param: 'solar_radiation', color: 'rgba(255,240,100,', phase: 4.8, targetSize:5, targetAlpha:0.65 },
-  { param: 'solar_wind', color: 'rgba(200,120,255,', phase: 6.0, targetSize:6, targetAlpha:0.7 },
-  { param: 'precipitation', color: 'rgba(100,220,255,', phase: 7.2, targetSize:6, targetAlpha:0.7 }
+  { param:'seismic', color:'rgba(220,60,80,', phase:0.0 },
+  { param:'magnetic', color:'rgba(60,180,255,', phase:1.2 },
+  { param:'atmosphere_wind', color:'rgba(80,255,160,', phase:2.4 },
+  { param:'atmosphere_temp', color:'rgba(255,180,60,', phase:3.6 },
+  { param:'solar_radiation', color:'rgba(255,240,100,', phase:4.8 },
+  { param:'solar_wind', color:'rgba(200,120,255,', phase:6.0 },
+  { param:'precipitation', color:'rgba(100,220,255,', phase:7.2 }
 ];
-blobs.forEach(b => { b.angle = Math.random()*Math.PI*2; b.radius = 60 + Math.random()*50; b.currentSize = b.targetSize; b.currentAlpha = b.targetAlpha; b.currentDist = b.radius; });
 
-function lerp(a, b, t) { return a + (b - a) * t; }
+blobs.forEach(b=>{
+  b.angle=Math.random()*Math.PI*2;
+  b.currentSize=6;
+  b.currentAlpha=0.7;
+  b.currentDist=80;
+});
 
-/* ---- весь JS нижче без змін ---- */
-async function fetchRealPlanetData() {
-  statusDiv.innerHTML = 'оновлення...';
-  let loaded = 0;
+function lerp(a,b,t){return a+(b-a)*t;}
 
-  try {
-    const weatherUrl = `https://api.open-meteo.com/v1/forecast?latitude=50.55&longitude=30.25&current=temperature_2m,wind_speed_10m,surface_pressure,precipitation,shortwave_radiation`;
-    const wRes = await fetch(weatherUrl);
-    if (wRes.ok) {
-      const w = (await wRes.json()).current || {};
-      realData.atmosphere_temp = Math.min(1, Math.max(0, (w.temperature_2m + 40) / 80));
-      realData.atmosphere_wind = Math.min(1, (w.wind_speed_10m || 0) / 80);
-      realData.atmosphere_pressure = Math.min(1, Math.max(0, ((w.surface_pressure || 1013) - 950) / 150));
-      realData.precipitation = Math.min(1, (w.precipitation || 0) / 15);
-      realData.solar_radiation = Math.min(1, (w.shortwave_radiation || 0) / 1200);
-      loaded += 5;
+async function fetchRealPlanetData(){
+  try{
+    const w = await (await fetch(
+      'https://api.open-meteo.com/v1/forecast?latitude=50.55&longitude=30.25&current=temperature_2m,wind_speed_10m,surface_pressure,precipitation,shortwave_radiation'
+    )).json();
+
+    const c=w.current||{};
+    realData.atmosphere_temp=(c.temperature_2m+40)/80;
+    realData.atmosphere_wind=(c.wind_speed_10m||0)/80;
+    realData.atmosphere_pressure=((c.surface_pressure||1013)-950)/150;
+    realData.precipitation=(c.precipitation||0)/15;
+    realData.solar_radiation=(c.shortwave_radiation||0)/1200;
+  }catch{}
+
+  Object.keys(realData).forEach(k=>{
+    if(k!=='chaos'){
+      dataHistory[k].push(realData[k]);
+      if(dataHistory[k].length>80) dataHistory[k].shift();
     }
-  } catch {}
+  });
 
-  statusDiv.innerHTML = loaded > 0 ? 'оновлено' : '';
+  let vars=[];
+  Object.keys(dataHistory).forEach(k=>{
+    const h=dataHistory[k];
+    if(h.length>1){
+      const m=h.reduce((a,b)=>a+b,0)/h.length;
+      vars.push(Math.sqrt(h.reduce((a,b)=>a+(b-m)**2,0)/h.length));
+    }
+  });
+  realData.chaos=vars.length?Math.min(1,vars.reduce((a,b)=>a+b,0)/vars.length*10):0.5;
+
+  dataDiv.innerHTML=Object.keys(realData)
+    .map(k=>`${k.padEnd(20,' ')} ${realData[k].toFixed(3)}`)
+    .join('<br>');
 }
 
 fetchRealPlanetData();
-setInterval(fetchRealPlanetData, 120000);
+setInterval(fetchRealPlanetData,120000);
 
-let t = 0;
-function loop() {
-  t += 0.016;
-  ctx.fillStyle = 'rgba(0,0,0,0.07)';
+let t=0;
+function loop(){
+  t+=0.016;
+  ctx.fillStyle='rgba(0,0,0,0.07)';
   ctx.fillRect(0,0,canvas.width,canvas.height);
+
+  stars.forEach(s=>{
+    ctx.fillStyle=`rgba(220,235,255,${s.baseAlpha})`;
+    ctx.fillRect(s.x,s.y,s.size,s.size);
+  });
+
+  const cx=canvas.width/2, cy=canvas.height/2;
+  const chaos=realData.chaos;
+
+  blobs.forEach(b=>{
+    b.angle+=0.01+chaos*0.04;
+    const x=cx+Math.cos(b.angle)*(80+chaos*60);
+    const y=cy+Math.sin(b.angle)*(80+chaos*60);
+    ctx.fillStyle=b.color+(0.4+chaos*0.4)+')';
+    ctx.beginPath(); ctx.arc(x,y,6+chaos*10,0,Math.PI*2); ctx.fill();
+  });
+
   requestAnimationFrame(loop);
 }
 loop();
