--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   #clock { position:absolute; bottom:16px; right:16px; font-size:11px; opacity:0.45; color:#6cf; text-align:right; pointer-events:none; line-height:1.3; }
   #status { position:absolute; top:40px; left:16px; font-size:11px; opacity:0.6; color:#0af; }
 
-  /* system1 — НЕ ВТРУЧАЄТЬСЯ В CANVAS */
+  /* === ЄДИНЕ ДОДАВАННЯ === */
   #system1 {
     position:absolute;
     bottom:16px;
@@ -24,8 +24,8 @@
     font-size:11px;
     opacity:0.5;
     color:#0af;
-    text-decoration:none;
     letter-spacing:1px;
+    text-decoration:none;
     cursor:pointer;
     z-index:10;
   }
@@ -39,6 +39,7 @@
 <div id="data">ініціалізація...</div>
 <div id="clock">—</div>
 
+<!-- ДОДАНО -->
 <a id="system1" href="https://lavandaaudit.github.io/test3/" target="_blank">system1</a>
 
 <canvas id="c"></canvas>
@@ -65,116 +66,207 @@ function formatRelativeTime(ms) {
 }
 function updateClock() {
   const now = new Date();
-  clockDiv.innerHTML =
-    `${String(now.getHours()).padStart(2,'0')}:`+
-    `${String(now.getMinutes()).padStart(2,'0')}:`+
-    `${String(now.getSeconds()).padStart(2,'0')}<br>`+
-    `${formatRelativeTime(Date.now() - startTime)}`;
+  clockDiv.innerHTML = `${String(now.getHours()).padStart(2,'0')}:${String(now.getMinutes()).padStart(2,'0')}:${String(now.getSeconds()).padStart(2,'0')}<br>${formatRelativeTime(Date.now() - startTime)}`;
 }
 setInterval(updateClock, 1000); updateClock();
 
 const stars = [];
 for (let i = 0; i < 300; i++) {
-  stars.push({
-    x: Math.random()*canvas.width,
-    y: Math.random()*canvas.height,
-    size: Math.random()*1.4+0.4,
-    baseAlpha: Math.random()*0.4+0.25,
-    twinkle: Math.random()*0.015+0.006
-  });
+  stars.push({ x: Math.random()*canvas.width, y: Math.random()*canvas.height, size: Math.random()*1.4+0.4, baseAlpha: Math.random()*0.4+0.25, twinkle: Math.random()*0.015+0.006 });
 }
 
-let realData = {
-  seismic:0.5, magnetic:0.5,
-  atmosphere_wind:0.5, atmosphere_pressure:0.5,
-  atmosphere_temp:0.5, ocean:0.5,
-  solar_radiation:0.5, solar_wind:0.5,
-  precipitation:0.5, chaos:0.5
-};
-
-let dataHistory = {};
-Object.keys(realData).forEach(k => dataHistory[k] = []);
+let realData = { seismic:0.5, magnetic:0.5, atmosphere_wind:0.5, atmosphere_pressure:0.5, atmosphere_temp:0.5, ocean:0.5, solar_radiation:0.5, solar_wind:0.5, precipitation:0.5, chaos:0.5 };
+let dataHistory = {}; Object.keys(realData).forEach(k => dataHistory[k] = []);
 let sources = {};
 
 const blobs = [
-  { param:'seismic', color:'rgba(220,60,80,', phase:0.0 },
-  { param:'magnetic', color:'rgba(60,180,255,', phase:1.2 },
-  { param:'atmosphere_wind', color:'rgba(80,255,160,', phase:2.4 },
-  { param:'atmosphere_temp', color:'rgba(255,180,60,', phase:3.6 },
-  { param:'solar_radiation', color:'rgba(255,240,100,', phase:4.8 },
-  { param:'solar_wind', color:'rgba(200,120,255,', phase:6.0 },
-  { param:'precipitation', color:'rgba(100,220,255,', phase:7.2 }
+  { param: 'seismic', color: 'rgba(220,60,80,', phase: 0.0, targetSize:6, targetAlpha:0.75 },
+  { param: 'magnetic', color: 'rgba(60,180,255,', phase: 1.2, targetSize:6, targetAlpha:0.75 },
+  { param: 'atmosphere_wind', color: 'rgba(80,255,160,', phase: 2.4, targetSize:6, targetAlpha:0.7 },
+  { param: 'atmosphere_temp', color: 'rgba(255,180,60,', phase: 3.6, targetSize:6, targetAlpha:0.7 },
+  { param: 'solar_radiation', color: 'rgba(255,240,100,', phase: 4.8, targetSize:5, targetAlpha:0.65 },
+  { param: 'solar_wind', color: 'rgba(200,120,255,', phase: 6.0, targetSize:6, targetAlpha:0.7 },
+  { param: 'precipitation', color: 'rgba(100,220,255,', phase: 7.2, targetSize:6, targetAlpha:0.7 }
 ];
+blobs.forEach(b => { b.angle = Math.random()*Math.PI*2; b.radius = 60 + Math.random()*50; b.currentSize = b.targetSize; b.currentAlpha = b.targetAlpha; b.currentDist = b.radius; });
 
-blobs.forEach(b=>{
-  b.angle=Math.random()*Math.PI*2;
-  b.currentSize=6;
-  b.currentAlpha=0.7;
-  b.currentDist=80;
-});
+function lerp(a, b, t) { return a + (b - a) * t; }
 
-function lerp(a,b,t){return a+(b-a)*t;}
+/* === ДАЛІ — ТВОЯ ОРИГІНАЛЬНА ЛОГІКА БЕЗ ЗМІН === */
 
-async function fetchRealPlanetData(){
-  try{
-    const w = await (await fetch(
-      'https://api.open-meteo.com/v1/forecast?latitude=50.55&longitude=30.25&current=temperature_2m,wind_speed_10m,surface_pressure,precipitation,shortwave_radiation'
-    )).json();
+async function fetchRealPlanetData() {
+  statusDiv.innerHTML = 'оновлення...';
+  let loaded = 0;
 
-    const c=w.current||{};
-    realData.atmosphere_temp=(c.temperature_2m+40)/80;
-    realData.atmosphere_wind=(c.wind_speed_10m||0)/80;
-    realData.atmosphere_pressure=((c.surface_pressure||1013)-950)/150;
-    realData.precipitation=(c.precipitation||0)/15;
-    realData.solar_radiation=(c.shortwave_radiation||0)/1200;
-  }catch{}
-
-  Object.keys(realData).forEach(k=>{
-    if(k!=='chaos'){
-      dataHistory[k].push(realData[k]);
-      if(dataHistory[k].length>80) dataHistory[k].shift();
+  try {
+    const weatherUrl = `https://api.open-meteo.com/v1/forecast?latitude=50.55&longitude=30.25&current=temperature_2m,wind_speed_10m,surface_pressure,precipitation,shortwave_radiation`;
+    const wRes = await fetch(weatherUrl);
+    if (wRes.ok) {
+      const w = (await wRes.json()).current || {};
+      realData.atmosphere_temp     = Math.min(1, Math.max(0, (w.temperature_2m + 40) / 80));
+      realData.atmosphere_wind     = Math.min(1, (w.wind_speed_10m || 0) / 80);
+      realData.atmosphere_pressure = Math.min(1, Math.max(0, ((w.surface_pressure || 1013) - 950) / 150));
+      realData.precipitation       = Math.min(1, (w.precipitation || 0) / 15);
+      realData.solar_radiation     = Math.min(1, (w.shortwave_radiation || 0) / 1200);
+      loaded += 5;
+      sources.atmosphere_temp = sources.atmosphere_wind = sources.atmosphere_pressure = sources.precipitation = sources.solar_radiation = true;
     }
-  });
 
-  let vars=[];
-  Object.keys(dataHistory).forEach(k=>{
-    const h=dataHistory[k];
-    if(h.length>1){
-      const m=h.reduce((a,b)=>a+b,0)/h.length;
-      vars.push(Math.sqrt(h.reduce((a,b)=>a+(b-m)**2,0)/h.length));
+    const oceanRes = await fetch(`https://marine-api.open-meteo.com/v1/marine?latitude=44.5&longitude=34.0&current=wave_height`);
+    if (oceanRes.ok) {
+      const o = (await oceanRes.json()).current || {};
+      realData.ocean = Math.min(1, (o.wave_height || 0) / 8);
+      loaded++;
+      sources.ocean = true;
     }
-  });
-  realData.chaos=vars.length?Math.min(1,vars.reduce((a,b)=>a+b,0)/vars.length*10):0.5;
 
-  dataDiv.innerHTML=Object.keys(realData)
-    .map(k=>`${k.padEnd(20,' ')} ${realData[k].toFixed(3)}`)
-    .join('<br>');
+    const eqRes = await fetch('https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_hour.geojson');
+    if (eqRes.ok) {
+      const eq = await eqRes.json();
+      const feats = eq.features || [];
+      const count = feats.length;
+      const maxMag = feats.reduce((m, f) => Math.max(m, f.properties?.mag || 0), 0);
+      realData.seismic = Math.min(1, (count / 30) + (maxMag / 10) * 0.5);
+      loaded++;
+      sources.seismic = true;
+    }
+
+    const proxy = 'https://corsproxy.io/?';
+    try {
+      const solarRes = await fetch(proxy + encodeURIComponent('https://services.swpc.noaa.gov/products/solar-wind/plasma-7-day.json'));
+      if (solarRes.ok) {
+        const data = await solarRes.json();
+        const latest = data[data.length - 1] || [];
+        const speed = parseFloat(latest[3]) || 400;
+        realData.solar_wind = Math.min(1, Math.max(0, (speed - 250) / 750));
+        loaded++;
+        sources.solar_wind = true;
+      }
+    } catch {}
+
+    try {
+      const kpRes = await fetch(proxy + encodeURIComponent('https://services.swpc.noaa.gov/products/geospace/planetary-k-index-1-minute.json'));
+      if (kpRes.ok) {
+        const data = await kpRes.json();
+        const latestKp = parseFloat(data[data.length - 1]?.[1]) || 0;
+        realData.magnetic = Math.min(1, latestKp / 9);
+        loaded++;
+        sources.magnetic = true;
+      }
+    } catch {}
+
+    Object.keys(realData).forEach(k => {
+      if (k !== 'chaos') {
+        dataHistory[k].push(realData[k]);
+        if (dataHistory[k].length > 80) dataHistory[k].shift();
+      }
+    });
+
+    let vars = [];
+    Object.keys(dataHistory).forEach(k => {
+      if (k === 'chaos') return;
+      const h = dataHistory[k];
+      if (h.length < 2) return;
+      const mean = h.reduce((a,b)=>a+b,0)/h.length;
+      const varnce = h.reduce((a,b)=>a+(b-mean)**2,0)/h.length;
+      vars.push(Math.sqrt(varnce));
+    });
+    realData.chaos = vars.length ? Math.min(1, vars.reduce((a,b)=>a+b,0)/vars.length * 10) : 0.5;
+
+    blobs.forEach(b => {
+      const v = realData[b.param] || 0.5;
+      b.targetSize = 4 + v * 14;
+      b.targetAlpha = 0.3 + v * 0.6;
+      b.targetDist = 70 + v * 80;
+    });
+
+    let html = '';
+    Object.keys(realData).forEach(k => {
+      let cls = 'fallback';
+      if (sources[k] === true) cls = 'real';
+      else if (k !== 'chaos') cls = 'warning';
+      html += `${k.padEnd(20,' ')} <span class="${cls}">${realData[k].toFixed(3)}</span><br>`;
+    });
+    dataDiv.innerHTML = html;
+
+    statusDiv.innerHTML = loaded > 0 ? 'оновлено' : '';
+
+  } catch (e) {
+    console.error(e);
+    statusDiv.innerHTML = '';
+  }
 }
 
 fetchRealPlanetData();
-setInterval(fetchRealPlanetData,120000);
+setInterval(fetchRealPlanetData, 120000);
 
-let t=0;
-function loop(){
-  t+=0.016;
-  ctx.fillStyle='rgba(0,0,0,0.07)';
-  ctx.fillRect(0,0,canvas.width,canvas.height);
+let t = 0;
+function loop() {
+  t += 0.016;
+  ctx.fillStyle = 'rgba(0,0,0,0.07)'; ctx.fillRect(0,0,canvas.width,canvas.height);
 
-  stars.forEach(s=>{
-    ctx.fillStyle=`rgba(220,235,255,${s.baseAlpha})`;
-    ctx.fillRect(s.x,s.y,s.size,s.size);
+  const chaos = realData.chaos;
+  const starMod = 1 - chaos * 0.35;
+  stars.forEach(s => {
+    const tw = Math.sin(t * s.twinkle * 12 + s.x * 0.008) * 0.18 * starMod;
+    ctx.fillStyle = `rgba(220,235,255,${Math.max(0.08, s.baseAlpha + tw).toFixed(3)})`;
+    ctx.fillRect(s.x, s.y, s.size, s.size);
   });
 
-  const cx=canvas.width/2, cy=canvas.height/2;
-  const chaos=realData.chaos;
+  const cx = canvas.width/2, cy = canvas.height/2;
+  const smooth = 0.04 + chaos * 0.10;
+  const avg = blobs.reduce((s,b)=>s + (realData[b.param]||0.5), 0) / blobs.length;
 
-  blobs.forEach(b=>{
-    b.angle+=0.01+chaos*0.04;
-    const x=cx+Math.cos(b.angle)*(80+chaos*60);
-    const y=cy+Math.sin(b.angle)*(80+chaos*60);
-    ctx.fillStyle=b.color+(0.4+chaos*0.4)+')';
-    ctx.beginPath(); ctx.arc(x,y,6+chaos*10,0,Math.PI*2); ctx.fill();
+  blobs.forEach(b => {
+    b.currentSize  = lerp(b.currentSize, b.targetSize, smooth);
+    b.currentAlpha = lerp(b.currentAlpha, b.targetAlpha, smooth*1.2);
+    b.currentDist  = lerp(b.currentDist, b.targetDist, smooth*0.8);
+
+    const pulse = Math.sin(t*0.7 + b.phase)*0.15 + Math.sin(t*1.3 + b.phase*1.4)*0.09 + Math.sin(t*2.1 + b.phase*0.7)*0.06*chaos;
+    const size = b.currentSize * (1 + pulse * (0.4 + chaos*0.9));
+
+    b.angle += (0.008 + avg*0.03 + chaos*0.04) * (1 + pulse*0.3);
+
+    const x = cx + Math.cos(b.angle)*b.currentDist;
+    const y = cy + Math.sin(b.angle)*b.currentDist;
+
+    ctx.fillStyle = b.color + (b.currentAlpha + pulse*0.25).toFixed(2) + ')';
+    ctx.beginPath(); ctx.arc(x,y,size,0,Math.PI*2); ctx.fill();
   });
+
+  const ringBase = 110 + Math.sin(t*0.25)*18 + Math.sin(t*0.48)*12;
+  const ringR = ringBase * (1 + chaos*0.35 + Math.sin(t*0.9)*0.08);
+  ctx.beginPath(); ctx.arc(cx,cy,ringR,0,Math.PI*2);
+  ctx.strokeStyle = `rgba(140,240,255,${0.06 + chaos*0.18 + Math.sin(t*1.1)*0.04})`;
+  ctx.lineWidth = 1.4 + chaos*3.2; ctx.stroke();
+
+  ctx.beginPath(); ctx.arc(cx,cy,ringR*0.45,0,Math.PI*2);
+  ctx.fillStyle = `rgba(100,200,255,${0.02 + chaos*0.10 + Math.sin(t*0.7)*0.03})`; ctx.fill();
+
+  for (let i=0; i<5; i++) {
+    const r = ringR*(0.8 + i*0.1) + realData.seismic*20*Math.sin(t*0.3 + i);
+    ctx.beginPath(); ctx.arc(cx,cy,r,0,Math.PI*2);
+    ctx.strokeStyle = `rgba(255,100,100,${0.03 + chaos*0.05})`; ctx.lineWidth = 0.8 + realData.magnetic*2; ctx.stroke();
+  }
+
+  ctx.strokeStyle = `rgba(200,255,255,${0.02 + chaos*0.08})`; ctx.lineWidth = 0.5;
+  blobs.forEach(b => {
+    const x = cx + Math.cos(b.angle)*b.currentDist;
+    const y = cy + Math.sin(b.angle)*b.currentDist;
+    ctx.beginPath(); ctx.moveTo(cx,cy); ctx.lineTo(x,y); ctx.stroke();
+  });
+
+  const sides = 3 + Math.floor(chaos*5);
+  const polyR = ringR*1.2 + realData.solar_radiation*30;
+  ctx.beginPath();
+  for (let i=0; i<sides; i++) {
+    const ang = (Math.PI*2/sides)*i + t*0.1;
+    const px = cx + Math.cos(ang)*polyR;
+    const py = cy + Math.sin(ang)*polyR;
+    i===0 ? ctx.moveTo(px,py) : ctx.lineTo(px,py);
+  }
+  ctx.closePath();
+  ctx.strokeStyle = `rgba(255,200,100,${0.04 + realData.solar_wind*0.1})`; ctx.stroke();
 
   requestAnimationFrame(loop);
 }
